--- a/AgentPortal/Teleopti.Ccc.AgentPortal/packages.config
+++ b/AgentPortal/Teleopti.Ccc.AgentPortal/packages.config
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="1.2.11" />
+  <package id="Syncfusion.Core" version="10.2.75" />
+  <package id="Syncfusion.Grid.Win" version="10.2.75" />
+  <package id="Syncfusion.Pdf" version="10.2.75" />
+  <package id="Syncfusion.Schedule.Win" version="10.2.75" />
+  <package id="Syncfusion.Shared.Base" version="10.2.75" />
+  <package id="Syncfusion.Shared.Win" version="10.2.75" />
+  <package id="Syncfusion.Tools.Win" version="10.2.75" />
 </packages>
