--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Service/packages.config
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Service/packages.config
@@ -9,4 +9,6 @@
   <package id="Rhino.ServiceBus" version="2.3.2.3" />
   <package id="Rhino.ServiceBus.Autofac" version="2.3.2.3" />
   <package id="Rhino.ServiceBus.References" version="2.3.2.3" />
+  <package id="Syncfusion.Core" version="10.2.75" />
+  <package id="Syncfusion.Pdf" version="10.2.75" />
 </packages>
