scenarios for the activities position, height and color

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Bindings\ColleagueStepDefinitions.cs" />
     <Compile Include="AbsenceRequestFromScheduleStepDefinitions.cs" />
     <Compile Include="AbsenceRequestFromRequestStepDefinitions.cs" />
+    <Compile Include="Data\User\ShiftsForTwoWeeksWithDifferentActivities.cs" />
     <Compile Include="ManageRequestStepDefinitions.cs" />
     <Compile Include="Data\User\DoNotHavePersonPeriods.cs" />
     <Compile Include="Data\User\DoNotHaveSchedulePeriods.cs" />
