--- a/Teleopti.Ccc.TestCommon/Teleopti.Ccc.TestCommon.csproj
+++ b/Teleopti.Ccc.TestCommon/Teleopti.Ccc.TestCommon.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ConnectionStringHelper.cs" />
     <Compile Include="DatabaseHelper.cs" />
     <Compile Include="DateTimeExtensions.cs" />
+    <Compile Include="GenericDisposable.cs" />
     <Compile Include="IniFileInfo.cs" />
     <Compile Include="CrossThreadTestRunner.cs" />
     <Compile Include="DataSourceHelper.cs" />
