--- a/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
+++ b/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
@@ -62,6 +62,7 @@
     <Compile Include="IniFile.cs" />
     <Compile Include="NullLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchemaVersionInformation.cs" />
     <Compile Include="SqlBatchExecutor.cs" />
     <Compile Include="Timeouts.cs" />
   </ItemGroup>
